Bug 62965 - EDITING: image contour editing crashes
Summary: EDITING: image contour editing crashes
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
4.0.1.2 release
Hardware: Other All
: high major
Assignee: Michael Stahl
URL:
Whiteboard: BSA target:4.1.0 target:3.6.7 target:...
Keywords: regression
: 63169 64686 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-03-31 15:13 UTC by csongor
Modified: 2013-05-17 16:22 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments
bt with symbols on master sources (6.14 KB, text/plain)
2013-04-03 22:27 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description csongor 2013-03-31 15:13:03 UTC
Problem description: 

Steps to reproduce:
1. launch LO Writer
2. paste an image from the hdd: Insert -> Image -> From File -> ... -> Open (I only guessed the English names. In my Hungarian LO: Beszúrás -> Kép -> Fájlból -> ... -> Megnyitás)
3. Right click on the image -> Wrap -> Edit Contour (Hungarian LO: Körbefuttatás -> Körvonal szerkesztése)
4. Click on the Polygon ("Sokszög" in Hungarian) icon on the toolbar 
5. Draw a triangle: 
- click at the first point of the triangle and hold down the mouse button
- release mouse button, drag the line to the second point and click there
- finish the contour by double click.



Current behavior:
LO crashes


Expected behavior:
Not crashing. :) 


In earlier versions I did not experience this problem. Now the exact version number is:

Verzió: 4.0.1.2 (Build az.: 84102822e3d61eb989ddd325abf1ac077904985)
              
Operating System: Windows XP
Version: 4.0.1.2 release
Comment 1 Julien Nabet 2013-04-03 22:27:52 UTC
Created attachment 77395 [details]
bt with symbols on master sources

On pc Debian x86-64 with master sources updated today, I reproduced the crash.
I attached bt.
Comment 2 Julien Nabet 2013-04-03 22:29:35 UTC
Michael/Cédric: put you in cc because it's on Writer but bt shows svx part, one for you?
Comment 3 Julien Nabet 2013-04-05 21:45:32 UTC
*** Bug 63169 has been marked as a duplicate of this bug. ***
Comment 4 Julien Nabet 2013-04-05 21:46:33 UTC
Put platform to ALL and increase importance (since ALL + crash)
Comment 5 Michael Stahl 2013-05-17 11:19:54 UTC
crash on dereferencing 0 pObjList:
 m_pListener = new ObjListListener(*this, *pObj, *pObjList->GetModel());

was introduced by:

commit 115054fef08998c56cba8f14472df1d15007f635
Author: David Tardon <dtardon@redhat.com>
Date:   Wed Feb 13 08:52:52 2013 +0100

    fdo#34548 don't crash on undoing text frame removal
Comment 6 Michael Stahl 2013-05-17 12:25:43 UTC
fixed on master
Comment 7 Commit Notification 2013-05-17 12:29:24 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=71f990d286c603b3bf220c8d93af69f04a45dd7a

fdo#62965: fix crash in Edit Contour dialog



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2013-05-17 14:37:47 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=401483d09d057e06cd9530e2ac53b4325caca577&h=libreoffice-3-6

fdo#62965: fix crash in Edit Contour dialog


It will be available in LibreOffice 3.6.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2013-05-17 14:38:23 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9fbc213ac882540b4d267d11d29eda68df297f16&h=libreoffice-4-0

fdo#62965: fix crash in Edit Contour dialog


It will be available in LibreOffice 4.0.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Terrence Enger 2013-05-17 16:22:58 UTC
*** Bug 64686 has been marked as a duplicate of this bug. ***