fdo#62965: fix crash in Edit Contour dialog

The pObjList is 0, so use pObj's GetModel() which should be the same.
(regression from 115054fef08998c56cba8f14472df1d15007f635)

Change-Id: Ib20e1806518f7b3b33d3fb4472d79d531ea9f1de